add facebook data to the threejs model

--- a/views/3dmodel/3dmodel.ejs
+++ b/views/3dmodel/3dmodel.ejs
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <!--<script src="public/leap-0.6.4.min.js"></script>-->
+        <script src="public/leap-0.6.4.min.js"></script>
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
         <style>
 			body {
@@ -54,23 +54,35 @@
                       box-shadow: 0 0 200px rgba(0,0,0,1) inset;
                     
                     }
+                    
+            .transform {
+                      -webkit-transition: all 1s ease;  
+                      -moz-transition: all 1s ease;  
+                      -o-transition: all 1s ease;  
+                      -ms-transition: all 1s ease;  
+                      transition: all 1s ease;
+                    }
+                    
+            .transform-active {
+                      opacity: 0.8;
+                    }
         </style>
     </head>
     <body>
         <div class="vignette3"></div>
         <div class="vignette3"></div>
         <div class="vignette3">
-          <img id = "left" src="http://s3.amazonaws.com/37assets/svn/765-default-avatar.png" style="border-radius:50%; width:25%; height:auto; margin: 25% auto; display: block; transform: rotate(90deg); opacity: 0.8;">
+          <img id="right" class="transform" src="http://s3.amazonaws.com/37assets/svn/765-default-avatar.png" style="border-radius:50%; width:25%; height:auto; margin: 27% auto; display: block; transform: rotate(90deg) scaleX(-1); opacity: 0;">
         </div>
         <div class="vignette2"></div>
         <div class="vignette2"></div>
         <div class="vignette2">
-          <img id = "top" src="http://s3.amazonaws.com/37assets/svn/765-default-avatar.png" style="border-radius:50%; width:25%; height:auto; margin: 25% auto; display: block; transform: rotate(-90deg); opacity: 0.8;">
+          <img id="left" class="transform" src="http://s3.amazonaws.com/37assets/svn/765-default-avatar.png" style="border-radius:50%; width:25%; height:auto; margin: 27% auto; display: block; transform: rotate(270deg) scaleX(-1); opacity: 0;">
         </div>
         <div class="vignette"></div>
         <div class="vignette"></div>
         <div class="vignette">
-          <img id = "right" src="http://s3.amazonaws.com/37assets/svn/765-default-avatar.png" style="border-radius:50%; width:25%; height:auto; margin: 25% auto; display: block; opacity: 0.8;">
+          <img id="top" class="transform" src="http://s3.amazonaws.com/37assets/svn/765-default-avatar.png" style="border-radius:50%; width:25%; height:auto; margin: 25% auto; display: block; opacity: 0; transform: scaleX(-1);">
         </div>
         <div id="container">
         </div>
@@ -79,6 +91,9 @@
             var currentFocus = null, nodeSelected = false, detailDisplay = null;
             var cameraMoving = false, cameraControlTarget = new THREE.Vector3(0,0,0);
             var cameraScaling = false, cameraScaleTarget = 1;
+            var displayAvatar = "http://s3.amazonaws.com/37assets/svn/765-default-avatar.png";
+            //var displayAvatar = "https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-1/p160x160/16265530_1231091583628276_7837519066771118514_n.jpg?oh=0bfb16c34231253f4aafbe78ec2599ba&oe=5A4C2531";
+            var arrows = new THREE.Object3D();
             var nodePolygons = 64;
             var nodeScale = 0.25;
             var camSpeed = 10;
@@ -91,7 +106,7 @@
                         top: 0.5,
                         width: 0.325,
                         height: 0.5,
-                        background: new THREE.Color(1, 0, 0),
+                        background: new THREE.Color(0, 0, 0),
                         eye: [1900, 0, 0],
                         up: [0, 1, 0],
                         rotation: [90, 0, 0],
@@ -102,7 +117,7 @@
                         top: 0,
                         width: 0.35,
                         height: 0.5,
-                        background: new THREE.Color(1, 0, 0),
+                        background: new THREE.Color(0, 0, 0),
                         eye: [0, 1800, 0],
                         up: [0, 0, 1],
                         rotation: [0, 0, 0],
@@ -111,9 +126,9 @@
                     {
                         left: 0.675,
                         top: 0.5,
-                        width: 0.35,
+                        width: 0.325,
                         height: 0.5,
-                        background: new THREE.Color(1, 0, 0),
+                        background: new THREE.Color(0, 0, 0),
                         eye: [-1900, 0, 0],
                         up: [0, 1, 0],
                         rotation: [-90, 0, 0],
@@ -160,71 +175,78 @@
             	document.addEventListener( 'mousedown', onDocumentMouseDown );
             	document.addEventListener( 'keydown', onGetKeyDown );
             	updateScene(initialDataGrab());
+            	drawArrows();
+            	scene.add(arrows);
+            }
+            
+            function dataGrab(locArray){
+                var ids = [];
+            	var text = [];
+                var temp = [];
+                var fbData = [];
+				for(var i = 0; i < locArray.length; i++) {
+				    ids.push(locArray[i].id);
+					temp.push(new THREE.Vector3( locArray[i].latitude,
+					  locArray[i].longitude, locArray[i].altitude ));
+					 text.push( String(locArray[i].address) );
+					 fbData.push({image: locArray[i].picture, status: locArray[i]['status'], name: locArray[i].username});
+				}
+		        return {vectors: temp, addresses: addresses};
+            }
+            
+            function grabFBData() {
+                var fbData = [];
+                <% for (var i = 0; i < locationArray.length; i++) { %>
+                    fbData.push({image: '<%=locationArray[i].picture%>', status: '<%=locationArray[i]['status']%>', name: '<%=locationArray[i].username%>'});
+                <%}%>
+                return fbData;
             }
             
             function initialDataGrab() {
+                var fbData = [];
 				var ids = [];
-                //var vectors = [];
                 var text = [];
-                var x = [];
-                var y = [];
-                var z = [];
+                var vectors = [];
                 
                 <% for (var i = 0; i < locationArray.length; i++) { %>
                     ids.push(<%=locationArray[i].id%>);
-                    //vectors.push(new THREE.Vector3(<%=locationArray[i].data.longitude%>, <%=locationArray[i].data.latitude%>, <%=locationArray[i].data.altitude%>));
                     text.push( String('<%=locationArray[i].data.address%>'));
-                    x.push(<%=locationArray[i].data.longitude%>);
-                    y.push(<%=locationArray[i].data.latitude%>);
-                    z.push(<%=locationArray[i].data.altitude%>);
+                    vectors.push( new THREE.Vector3( <%=locationArray[i].data.longitude%>, <%=locationArray[i].data.latitude%>, <%=locationArray[i].data.altitude%> ) );
+                    fbData.push({image: '<%=locationArray[i].picture%>', status: '<%=locationArray[i]['status']%>', name: '<%=locationArray[i].username%>'});
                 <%}%>
-                return {ids: ids, statuses: text, x: x, y: y, z: z};
+                return {ids: ids, statuses: text, vectors: vectors, fbData: fbData};
             }
             
-            function dataGrab(locationArray) {
-				var ids = [];
-                //var vectors = [];
-                var text = [];
-                var x = [];
-                var y = [];
-                var z = [];
-                
-                <% for (var i = 0; i < locationArray.length; i++) { %>
-                    ids.push(<%=locationArray[i].id%>);
-                    //vectors.push(new THREE.Vector3(<%=locationArray[i].data.longitude%>, <%=locationArray[i].data.latitude%>, <%=locationArray[i].data.altitude%>));
-                    text.push( String('<%=locationArray[i].data.address%>'));
-                    x.push(<%=locationArray[i].data.longitude%>);
-                    y.push(<%=locationArray[i].data.latitude%>);
-                    z.push(<%=locationArray[i].data.altitude%>);
-                <%}%>
-                return {ids: ids, statuses: text, x: x, y: y, z: z};
-            }    
-            
-            function updateNode(node, newVectors, newStatus, index) {
-                //console.log("Comparison: ", node.position, newPos);
-                var temp = new THREE.Vector3(newVectors.X[index], newVectors.Y[index], newVectors.Z[index]);
-                if (vectorsAreDifferent(node.position, temp)) {
+            function updateNode(node, newVectors, streamData, index) {
+                //var temp = new THREE.Vector3(newVectors.X[index], newVectors.Y[index], newVectors.Z[index]);
+                if (vectorsAreDifferent(node.position, newVectors[index])) {
                     console.log("Node position changed");
                     node.moving = true;
-                    node.translateTarget = temp;
-                    //node.position.set(temp.x, temp.y, temp.z);
-                    // console.log("newPos: ", node.position.x, node.position.y, node.position.z);
-                    // console.log("DistanceTo: ", node.translateDist);
+                    node.translateTarget = newVectors[index];
                 }
-                node.text = newStatus;
+                if (streamData.fbData[index]['status'] != node['status']) {
+                    node['status'] = streamData.fbData[index]['status'];
+                }
+                if (node['status'] != "Safe")
+                    node.mesh.material = new THREE.MeshBasicMaterial({color: 0xff0000});
+                node.text = streamData.statuses[index];
             }
             
             function updateScene(streamData) {
-                console.log(streamData);
-                var convertedPositions = normalizeCoordPack(streamData.x, streamData.y, streamData.z);
+                var convertedPositions = normalizeCoordPack(streamData.vectors);
                 console.log(convertedPositions);
                 for (var i = 0; i < streamData['ids'].length; i++) {
                     if (!(streamData['ids'][i] in clusterLoop.hashTable)) {
-                        console.log("Done");
                         clusterLoop.newNode(streamData, i);
                     } else {
                         //console.log("Conversions", convertedPositions[i], streamData['ids'][i], streamData['vectors'][i]);
-                        updateNode(clusterLoop.hashTable[streamData['ids'][i]], convertedPositions, streamData.statuses[i], i);
+                        updateNode(clusterLoop.hashTable[streamData['ids'][i]], convertedPositions, streamData, i);
+                    }
+                }
+                for (var i = 0; i < clusterLoop.hashTable.length; i++) { // delete disconnected nodes
+                    if (!(clusterLoop.hashTable[i] in streamData['ids'])) {
+                        // get THE nodenetwork with the node we want to delete
+                        clusterLoop.head.network.deleteNode(clusterLoop.hashTable[i]);
                     }
                 }
             }
@@ -275,22 +297,22 @@
                         success: function(resData) {
                             var ids = [];
                             var text = [];
-                            var x = [];
-                            var y = [];
-                            var z = [];
-                            
+                            var vectors = [];
+                            var fbData = [];
                             for (var i = 0; i < resData.length; i++) {
                                 ids.push(resData[i].id);
                                 text.push( String(resData[i].data.address));
-                                x.push(resData[i].data.longitude);
-                                y.push(resData[i].data.latitude);
-                                z.push(resData[i].data.altitude);
+                                vectors.push( new THREE.Vector3(resData[i].data.longitude, resData[i].data.latitude, resData[i].data.altitude));
+                                //fbData.push({image: resData[i].picture, status: resData[i].status, name: resData[i].username});
                             }
-                            var streamData = {ids: ids, statuses: text, x: x, y: y, z: z};
+                            //vectors = grabVectorData();
+                            fbData = grabFBData();
+                            var streamData = {ids: ids, statuses: text, vectors: vectors, fbData: fbData};
                             updateScene(streamData);
+                            //updateScene(dataGrab(resData));
                         }
                     });
-                }, 5000);
+                }, 10000);
         </script>
     </body>
 </html>
