--- a/views/partials/headermodel.ejs
+++ b/views/partials/headermodel.ejs
@@ -14,11 +14,13 @@
             <script src="../public/libraries/bendmodifier.js"></script>
             <script src="../public/libraries/convexgeometry.js"></script>
             <script src="../public/libraries/quickhull.js"></script>
+            <script src="../public/libraries/leap-0.6.4.min.js"></script>
             
             <script src="../public/structures.js"></script>
             <script src="../public/operators.js"></script>
             <script src="../public/controller.js"></script>
             <script src="../public/cameracontroller.js"></script>
+            <script src="../public/leapcontroller.js"></script>
             <!--<script type="text/javascript" src="../private/datastream.js"></script>-->
             
         </head>
