--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -10,6 +10,11 @@
                             <button class="btn btn-lg btn-primary" href="/3dmodel">Proceed!</button>
                         </div>
                     </form>
+                    <form action="/3dmodel2" method="GET">
+                        <div class="form-group">
+                            <button class="btn btn-lg btn-primary" href="/3dmodel2">Human View Of Model!</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
